@@ -1,12 +1,21 @@
 package co.rsk;
 
+import static org.mockito.Mockito.mock;
+
 import co.rsk.crypto.Keccak256;
-import org.ethereum.crypto.ECKey;
-import org.ethereum.crypto.HashUtil;
+import co.rsk.db.MutableTrieCache;
+import co.rsk.db.MutableTrieImpl;
+import co.rsk.trie.Trie;
 import java.nio.charset.StandardCharsets;
+import java.time.Instant;
+import java.time.ZonedDateTime;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import org.ethereum.config.blockchain.upgrades.ActivationConfig;
+import org.ethereum.core.*;
+import org.ethereum.crypto.ECKey;
+import org.ethereum.crypto.HashUtil;
+import org.ethereum.db.MutableRepository;
 
 public class RskTestUtils {
 
@@ -18,11 +27,40 @@ public class RskTestUtils {
         return new Keccak256(bytes);
     }
 
+    public static ECKey getEcKeyFromSeed(String seed) {
+        byte[] seedHash = HashUtil.keccak256(seed.getBytes(StandardCharsets.UTF_8));
+        return ECKey.fromPrivate(seedHash);
+    }
+
     public static List<ECKey> getEcKeysFromSeeds(String[] seeds) {
         return Arrays.stream(seeds)
-            .map(seed -> seed.getBytes(StandardCharsets.UTF_8))
-            .map(HashUtil::keccak256)
-            .map(ECKey::fromPrivate)
-            .collect(Collectors.toList());
+            .map(RskTestUtils::getEcKeyFromSeed)
+            .toList();
+    }
+
+    public static Block createRskBlock() {
+        final int defaultBlockNumber = 1001;
+        final Instant defaultBlockTimestamp = ZonedDateTime.parse("2020-01-20T12:00:08.400Z").toInstant();
+
+        return createRskBlock(defaultBlockNumber, defaultBlockTimestamp.toEpochMilli());
+    }
+
+    public static Block createRskBlock(long blockNumber) {
+        final Instant defaultBlockTimestamp = ZonedDateTime.parse("2020-01-20T12:00:08.400Z").toInstant();
+
+        return createRskBlock(blockNumber, defaultBlockTimestamp.toEpochMilli());
+    }
+
+    public static Block createRskBlock(long blockNumber, long blockTimestamp) {
+        BlockHeader blockHeader = new BlockHeaderBuilder(mock(ActivationConfig.class))
+            .setNumber(blockNumber)
+            .setTimestamp(blockTimestamp)
+            .build();
+
+        return Block.createBlockFromHeader(blockHeader, true);
+    }
+
+    public static Repository createRepository() {
+        return new MutableRepository(new MutableTrieCache(new MutableTrieImpl(null, new Trie())));
     }
 }
